--- a/src/i18n/en/test-page.en.xlf
+++ b/src/i18n/en/test-page.en.xlf
@@ -1,5 +1,14 @@
 <xliff version="2.0" xmlns="urn:oasis:names:tc:xliff:document:2.0" srcLang="en" trgLang="en">
   <file original="ng.template" id="locl">
+    <unit id="test-page.make-a-transfer.title">
+      <notes>
+        <note category="description">make a transfer</note>
+      </notes>
+      <segment>
+        <source>Make a Transfer</source>
+        <target>Make a Transfer</target>
+      </segment>
+    </unit>
     <unit id="test-page.recent-transaction.title">
       <notes>
         <note category="description">recent transaction title</note>
