--- a/src/i18n/messages.en.xlf
+++ b/src/i18n/messages.en.xlf
@@ -1,13 +1,14 @@
 
-<xliff version="2.0" xmlns="urn:oasis:names:tc:xliff:document:2.0" srcLang="en">
+<xliff version="2.0" xmlns="urn:oasis:names:tc:xliff:document:2.0" srcLang="en" trgLang="en">
   <file original="ng.template" id="ngi18n">
     <unit id="test-page.make-a-transfer.title">
       <notes>
         <note category="description">make a transfer</note>
         <note category="location">src/app/test-page/test-page.component.html:2</note>
       </notes>
-      <segment>
+      <segment state="final">
         <source>Make a Transfer</source>
+        <target>Make a Transfer</target>
       </segment>
     </unit>
     <unit id="test-page.recent-transaction.title">
@@ -15,8 +16,9 @@
         <note category="description">recent transaction title</note>
         <note category="location">src/app/test-page/test-page.component.html:8</note>
       </notes>
-      <segment>
+      <segment state="final">
         <source>Recent Transactions</source>
+        <target>Recent Transactions</target>
       </segment>
     </unit>
   </file>
