--- a/src/i18n/messages.pl.xlf
+++ b/src/i18n/messages.pl.xlf
@@ -1,10 +1,11 @@
-<xliff version="2.0" xmlns="urn:oasis:names:tc:xliff:document:2.0" srcLang="pl" trgLang="pl">
-  <file original="ng.template" id="locl">
+<xliff version="2.0" xmlns="urn:oasis:names:tc:xliff:document:2.0" srcLang="en" trgLang="pl">
+  <file original="ng.template" id="ngi18n">
     <unit id="test-page.make-a-transfer.title">
       <notes>
         <note category="description">make a transfer</note>
+        <note category="location">src/app/test-page/test-page.component.html:2</note>
       </notes>
-      <segment>
+      <segment state="initial">
         <source>Make a Transfer</source>
         <target>Zrób przelew</target>
       </segment>
@@ -12,8 +13,9 @@
     <unit id="test-page.recent-transaction.title">
       <notes>
         <note category="description">recent transaction title</note>
+        <note category="location">src/app/test-page/test-page.component.html:8</note>
       </notes>
-      <segment>
+      <segment state="initial">
         <source>Recent Transactions</source>
         <target>Ostatnie tranzakcje</target>
       </segment>
