--- a/src/i18n/messages.en.xlf
+++ b/src/i18n/messages.en.xlf
@@ -1,3 +1,4 @@
+
 <xliff version="2.0" xmlns="urn:oasis:names:tc:xliff:document:2.0" srcLang="en" trgLang="en">
   <file original="ng.template" id="ngi18n">
     <unit id="test-page.make-a-transfer.title">
@@ -18,6 +19,56 @@
       <segment state="final">
         <source>Recent Transactions</source>
         <target>Recent Transactions</target>
+      </segment>
+    </unit>
+    <unit id="transaction-history.search.placeholder">
+      <notes>
+        <note category="description">search placeholder</note>
+        <note category="location">src/app/test-page/transactions-history/transactions-history.component.html:4</note>
+      </notes>
+      <segment state="final">
+        <source>Search by typing...</source>
+        <target>Search by typing...</target>
+      </segment>
+    </unit>
+    <unit id="transaction-history.sort-by">
+      <notes>
+        <note category="description">sort by label</note>
+        <note category="location">src/app/test-page/transactions-history/transactions-history.component.html:10</note>
+      </notes>
+      <segment state="final">
+        <source>Sort by</source>
+        <target>Sort by</target>
+      </segment>
+    </unit>
+    <unit id="transaction-history.sort-by.date">
+      <notes>
+        <note category="description">(sort by) date</note>
+        <note category="location">src/app/test-page/transactions-history/transactions-history.component.html:13</note>
+      </notes>
+      <segment state="final">
+        <source>Date</source>
+        <target>Date</target>
+      </segment>
+    </unit>
+    <unit id="transaction-history.sort-by.beneficiary">
+      <notes>
+        <note category="description">(sort by) beneficiary</note>
+        <note category="location">src/app/test-page/transactions-history/transactions-history.component.html:18</note>
+      </notes>
+      <segment state="final">
+        <source>Beneficiary</source>
+        <target>Beneficiary</target>
+      </segment>
+    </unit>
+    <unit id="transaction-history.sort-by.amount">
+      <notes>
+        <note category="description">(sort by) amount</note>
+        <note category="location">src/app/test-page/transactions-history/transactions-history.component.html:23</note>
+      </notes>
+      <segment state="final">
+        <source>Amount</source>
+        <target>Amount</target>
       </segment>
     </unit>
     <unit id="confirmation-dialog.header">
@@ -67,6 +118,7 @@
       </notes>
       <segment state="final">
         <source>
+          Amount:
           <ph id="0" equiv="INTERPOLATION" disp="{{transaction.transaction | parseAmount | currency}}"/>
         </source>
         <target>
@@ -93,6 +145,46 @@
       <segment state="final">
         <source>Transfer</source>
         <target>Transfer</target>
+      </segment>
+    </unit>
+    <unit id="transfer-form.from-account.label">
+      <notes>
+        <note category="description">from account label</note>
+        <note category="location">src/app/test-page/transfer-form/transfer-form.component.html:3</note>
+      </notes>
+      <segment state="final">
+        <source>From account</source>
+        <target>From account</target>
+      </segment>
+    </unit>
+    <unit id="transfer-form.to-account.label">
+      <notes>
+        <note category="description">to account label</note>
+        <note category="location">src/app/test-page/transfer-form/transfer-form.component.html:7</note>
+      </notes>
+      <segment state="final">
+        <source>To account</source>
+        <target>To account</target>
+      </segment>
+    </unit>
+    <unit id="transfer-form.amountt.label">
+      <notes>
+        <note category="description">amount label</note>
+        <note category="location">src/app/test-page/transfer-form/transfer-form.component.html:11</note>
+      </notes>
+      <segment state="final">
+        <source>Amount</source>
+        <target>Amount</target>
+      </segment>
+    </unit>
+    <unit id="transfer-form.submit.button">
+      <notes>
+        <note category="description">submit button</note>
+        <note category="location">src/app/test-page/transfer-form/transfer-form.component.html:15</note>
+      </notes>
+      <segment state="final">
+        <source>Submit</source>
+        <target>Submit</target>
       </segment>
     </unit>
   </file>
