--- a/src/i18n/messages.xlf
+++ b/src/i18n/messages.xlf
@@ -1,3 +1,4 @@
+
 <xliff version="2.0" xmlns="urn:oasis:names:tc:xliff:document:2.0" srcLang="en">
   <file original="ng.template" id="ngi18n">
     <unit id="test-page.make-a-transfer.title">
@@ -16,6 +17,51 @@
       </notes>
       <segment>
         <source>Recent Transactions</source>
+      </segment>
+    </unit>
+    <unit id="transaction-history.search.placeholder">
+      <notes>
+        <note category="description">search placeholder</note>
+        <note category="location">src/app/test-page/transactions-history/transactions-history.component.html:4</note>
+      </notes>
+      <segment>
+        <source>Search by typing...</source>
+      </segment>
+    </unit>
+    <unit id="transaction-history.sort-by">
+      <notes>
+        <note category="description">sort by label</note>
+        <note category="location">src/app/test-page/transactions-history/transactions-history.component.html:10</note>
+      </notes>
+      <segment>
+        <source>Sort by</source>
+      </segment>
+    </unit>
+    <unit id="transaction-history.sort-by.date">
+      <notes>
+        <note category="description">(sort by) date</note>
+        <note category="location">src/app/test-page/transactions-history/transactions-history.component.html:13</note>
+      </notes>
+      <segment>
+        <source>Date</source>
+      </segment>
+    </unit>
+    <unit id="transaction-history.sort-by.beneficiary">
+      <notes>
+        <note category="description">(sort by) beneficiary</note>
+        <note category="location">src/app/test-page/transactions-history/transactions-history.component.html:18</note>
+      </notes>
+      <segment>
+        <source>Beneficiary</source>
+      </segment>
+    </unit>
+    <unit id="transaction-history.sort-by.amount">
+      <notes>
+        <note category="description">(sort by) amount</note>
+        <note category="location">src/app/test-page/transactions-history/transactions-history.component.html:23</note>
+      </notes>
+      <segment>
+        <source>Amount</source>
       </segment>
     </unit>
     <unit id="confirmation-dialog.header">
@@ -76,6 +122,42 @@
       </notes>
       <segment>
         <source>Transfer</source>
+      </segment>
+    </unit>
+    <unit id="transfer-form.from-account.label">
+      <notes>
+        <note category="description">from account label</note>
+        <note category="location">src/app/test-page/transfer-form/transfer-form.component.html:3</note>
+      </notes>
+      <segment>
+        <source>From account</source>
+      </segment>
+    </unit>
+    <unit id="transfer-form.to-account.label">
+      <notes>
+        <note category="description">to account label</note>
+        <note category="location">src/app/test-page/transfer-form/transfer-form.component.html:7</note>
+      </notes>
+      <segment>
+        <source>To account</source>
+      </segment>
+    </unit>
+    <unit id="transfer-form.amountt.label">
+      <notes>
+        <note category="description">amount label</note>
+        <note category="location">src/app/test-page/transfer-form/transfer-form.component.html:11</note>
+      </notes>
+      <segment>
+        <source>Amount</source>
+      </segment>
+    </unit>
+    <unit id="transfer-form.submit.button">
+      <notes>
+        <note category="description">submit button</note>
+        <note category="location">src/app/test-page/transfer-form/transfer-form.component.html:15</note>
+      </notes>
+      <segment>
+        <source>Submit</source>
       </segment>
     </unit>
   </file>
